<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/addtrip1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/addtripheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/addtrip"
            android:textColor="#0000FF" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/titleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/Atitle"
                android:textColor="#0000FF" />

            <EditText
                android:id="@+id/titleET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="#DA3287" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/mainlocationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/Alocation"
                android:textColor="#0000FF" />

            <EditText
                android:id="@+id/mainlocationET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="#DA3287" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/dateofthetripTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/Adate"
                android:textColor="#0000FF" />

            <EditText
                android:id="@+id/dateET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/AhintDate"
                android:inputType="date"
                android:textColor="#DA3287" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/daysspendTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/Adays"
                android:textColor="#0000FF" />

            <EditText
                android:id="@+id/daysspendET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:textColor="#DA3287" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/travellingTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/Atravel"
                android:textColor="#0000FF" />

            <EditText
                android:id="@+id/travellingET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/AhintTravel"
                android:textColor="#DA3287" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/expendiitureTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/Atotal"
                android:textColor="#0000FF" />

            <EditText
                android:id="@+id/expenditureET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:textColor="#DA3287" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/downIV1"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.75"
                android:src="@drawable/down2"
                android:visibility="invisible" />

            <Button
                android:id="@+id/saveB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:text="@string/Asavedata"
                android:textColor="@android:color/holo_red_light" />

            <ImageView
                android:id="@+id/downIV2"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.75"
                android:src="@drawable/down2"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/addplacesTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/Aaddplaces"
                android:textColor="#0000FF"
                android:visibility="invisible" />

            <Button
                android:id="@+id/manualB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Amanual"
                android:textColor="@android:color/holo_red_light"
                android:visibility="invisible" />

            <Button
                android:id="@+id/GpsB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Agps"
                android:textColor="@android:color/holo_red_light"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>